# hyperrogue

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  3d-models.cpp  CITATION.cff  Doxyfile  FUNDING.yml  Makefile  Makefile.am  Makefile.in  Makefile.mac  Makefile.mgw  Makefile.rv  Makefile.simple  README.md  achievement.cpp  achievement.h  animations.cpp  aperiodic-hat.cpp  appveyor.bat  appveyor.yml  arbiquotient.cpp  arbitrile.cpp  archimedean.cpp  asonov.cpp  attack.cpp  autogen.sh  backed-map.cpp  barriers.cpp  basegraph.cpp  bigstuff.cpp  binary-tiling.cpp  blizzard.cpp  cell.cpp  celldrawer.cpp  certify.cpp  changelog.txt  checkmove.cpp  classes.cpp  (+175 more)
.deps/: hyper.Po  langen.Po
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.sh  gh_ci_android.yml  github_ci.yml  install_deps.sh  test_simple.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
contrib/: hyperrogue.desktop
devmods/: 3d-field-quotients.txt  README.md  autoplay.cpp  edit-shaders.cpp  gentrans.cpp  hatter.cpp  honeycomb-generator.cpp  honeycomb-rule-generator.cpp  knuth-bendix.cpp  manual-animation.cpp  musictable.cpp  rulegen-tests.cpp  rulegen.sh  solv-error-analyze.cpp  solv-table.cpp  tests.cpp
devmods/reps/: counter.cpp  multivector.cpp  rep-halfplane.cpp  rep-hr.cpp  rep-multi.cpp  rep-polar.cpp  reps.cpp  results.Md  tests.cpp
devmods/rulegen-tests/: tricky.lst
generators/: README.md  bring.cpp  macbeath.cpp  patterngen.cpp  quartic.cpp  schmutz.cpp
hydroid/: README.md  copy.sh
hydroid/app/: build.gradle
hyperroid/: README.md  build.gradle  copy.sh  settings.gradle
hyperroid/app/: CMakeLists.txt  build.gradle
hyperroid/app/src/main/: AndroidManifest.xml
hyperroid/app/src/main/java/com/android/texample/: GLText.java  Shader.java  SpriteBatch.java  TextureRegion.java  Vertices.java
hyperroid/app/src/main/java/com/roguetemple/hyperroid/: ForegroundService.java  HyperProvider.java  HyperRenderer.java  HyperRogue.java  HyperSettings.java  HyperView.java
hyperroid/app/src/main/jni/: hyper.cpp
hyperroid/app/src/main/res/layout/: main.xml
hyperroid/app/src/main/res/values/: arrays.xml  strings.xml
hyperroid/app/src/main/res/values-pl/: strings.xml
hyperroid/app/src/main/res/values-ru/: strings.xml
hyperroid/app/src/main/res/xml/: preferences.xml
licenses/: SIL Open Font License.txt
rogueviz/: antidesitter.cpp  ascending-descending.cpp  backhead.cpp  balloonsim.cpp  balls.cpp  banachtarski.cpp  bringris.cpp  collatz.cpp  crystal-sokoban.cpp  cvl.cpp  dhrg-pres.cpp  dpgen.cpp  dynamic-wfc.cpp  embedded-chess.cpp  embeddings.cpp  extra-projections.cpp  fifteen.cpp  flocking.cpp  fullnet.cpp  functions.cpp  fundamental.cpp  gobot.cpp  graphs.cpp  grigorchuk.cpp  hat-animations.cpp  heatx.cpp  highdim-demo.cpp  horo63.cpp  hypcity.cpp  hyperbolic-analogs.cpp  hyperbolic-minesweeper-pres.cpp  hypocycloid.cpp  impossible-ring.cpp  inner-maps.cpp  intra-demos.cpp  janko.cpp  kohonen.cpp  kohonen.h  leastsquare.cpp  magiccube.cpp  (+42 more)
rogueviz/ads/: ads-game.cpp  ads-lands.cpp  control.cpp  display.cpp  ds-game.cpp  ds-texture.cpp  globals.cpp  help.cpp  hiscore.cpp  map.cpp  math.cpp  menu.cpp  resources.cpp  shapes.cpp  tour.cpp  views.cpp
rogueviz/dhrg/: betweenness.cpp  dhrg-128.cpp  dhrg-64.cpp  dhrg-rank.cpp  dhrg-utils.cpp  dhrg.cpp  dhrg.h  dynamic.cpp  embedder.cpp  gridmapping.cpp  groundtruth.cpp  legacy.cpp  loglik.cpp  mycell.cpp  paths.cpp  readgraph.cpp  regular.cpp  routing.cpp  segment.cpp  tests.cpp  visualize.cpp
rogueviz/embeddings/: compare.cpp  coords.cpp  embeddings.cpp  embeddings.h  loglik.cpp  maprank.cpp  mdl.cpp  polar.cpp  routing.cpp  visualize.cpp
rogueviz/models/: Polyfjord_Chess_Set.mtl  README.txt  bunny.mtl  maxwellcat.mtl  spinning-rat.mtl
rogueviz/nilrider/: level.cpp  levels.cpp  nilrider.cpp  nilrider.h  planning.cpp  sample.nrl  save.cpp  solver.cpp  statues.cpp  timestamp.cpp
rogueviz/ru/: cheat.txt  classes.cpp  entity.cpp  flavors.cpp  geometry.cpp  globals.cpp  hallucinate.cpp  load-world.cpp  man.cpp  map.ru  namedcolors.cpp  portals.cpp  powers.cpp  randeff.cpp  render.cpp  reverts.cpp  room.cpp  ru.cpp  save.cpp  staters.cpp  stats.cpp
rogueviz/sag/: README.md  annealing.cpp  cells.cpp  continuous.cpp  data.cpp  experiments.cpp  functions.cpp  sag.cpp  sag.h
rogueviz/som/: analyzer.cpp  embeddings.cpp  kohonen.cpp  kohonen.h  measures.cpp  tests.cpp  voronoi.cpp
sounds/: credits.txt
tessellations/: 3-5-2-1f-1.tes  3-5-2-1s-1.tes  3-5-4-1s-1.tes  3-5-5-1-1.tes  3-5-5-2-1.tes  4-6-1f-5.tes  4-6-1s-1.tes  4-6-1s-1b.tes  7-3-2-1s-1.tes  README.txt  brickwork.tes  floret.tes  hexiamond.tes  hr-standard-tiling.tes  marek313.tes  marek3_11_4_1.tes  marek3_7_8_a.tes  marek3_7_8_b.tes  marjorie-rice.tes  twothree.tes
tessellations/3-11-4/: marek3-11-4-1-01.tes  marek3-11-4-1-02.tes  marek3-11-4-1-03.tes  marek3-11-4-1-04.tes  marek3-11-4-1-05.tes  marek3-11-4-1-06.tes  marek3-11-4-1-07.tes  marek3-11-4-1-08.tes  marek3-11-4-1-09.tes  marek3-11-4-1-10.tes  marek3-11-4-1-11.tes  marek3-11-4-1-12.tes  marek3-11-4-2-01.tes  marek3-11-4-2-02.tes  marek3-11-4-2-03.tes  marek3-11-4-2-04.tes  marek3-11-4-2-05.tes  marek3-11-4-3-01.tes  marek3-11-4-3-02.tes  marek3-11-4-3-03.tes  marek3-11-4-3-04.tes  marek3-11-4-3-05.tes  marek3-11-4-3-06.tes  marek3-11-4-3-07.tes  marek3-11-4-3-08.tes  marek3-11-4-3-09.tes  marek3-11-4-3-10.tes  marek3-11-4-3-11.tes  marek3-11-4-3-12.tes
tessellations/3-13-5/: marek3-13-5-1-1.tes  marek3-13-5-1-2.tes  marek3-13-5-2-1.tes  marek3-13-5-2-10.tes  marek3-13-5-2-11.tes  marek3-13-5-2-12.tes  marek3-13-5-2-2.tes  marek3-13-5-2-3.tes  marek3-13-5-2-4.tes  marek3-13-5-2-5.tes  marek3-13-5-2-6.tes  marek3-13-5-2-7.tes  marek3-13-5-2-8.tes  marek3-13-5-2-9.tes  marek3-13-5-3-1.tes  marek3-13-5-3-2.tes  marek3-13-5-3-3.tes  marek3-13-5-3-4.tes  marek3-13-5-4-1.tes  marek3-13-5-4-2.tes
tessellations/3-8-2/: 3-8-2-1a1-1.tes  3-8-2-1f-1.tes  3-8-2-1s-1.tes
tessellations/3-9-2/: 3-9-2s-1.tes
tessellations/4-5-2/: 4-5-2-1f+1f-02.tes  4-5-2-1f+1f-03.tes  (+39 more)
(+1803 files in other folders)
